# sn0l

./: CITATION.cff  Cargo.toml  README.md
python/: config_collection.py  conspiracy_analysis.py  generate_training_data.py  main.py  mse.py  per_alg_analysis.py  position_runs.py  total_stats_pictures.py
src/: lib.rs  main.rs
src/analysis/: args.rs  chess_position.rs  database.rs  match_orchestration.rs  mod.rs  mtd_h.rs  mtd_h_utils.rs  openings_dataset.rs
src/analysis/database/: mod.rs  rows.rs
src/core/: evaluation.rs  evaluation_old.rs  mod.rs  score.rs
src/core/evaluation/: incremental.rs  mod.rs
src/core/score/: mod.rs  score_tables.rs
src/core/search/: alpha_beta.rs  common.rs  conspiracy_counter.rs  draw_detection.rs  iterative_deepening.rs  mod.rs  move_ordering.rs  mt.rs  mt_w_conspiracy.rs  mtd.rs  mtdbi.rs  mtdf.rs  transposition.rs
src/core/search/conspiracy_search/: merging.rs  mod.rs  mt_w_conspiracy.rs  mtd_w_conspiracy.rs
src/core/search/search_result/: debug_search_result.rs  minimal_search_result.rs  mod.rs
src/core/search/transpositions/: hash_transposition.rs  high_depth_transposition.rs  mod.rs  no_transposition.rs
src/input/: command_line.rs  mod.rs  protocol_interpreter.rs  stdin.rs  uci_interpreter.rs
src/tests/: conspiracy_counter.rs  epd.rs  eval_bound.rs  low_ply_tests.rs  low_ply_tests_conspiracy.rs  mod.rs  mt_alpha_beta_equivalence.rs  mtdbi_alpha_beta_equivalence.rs  mtdf_alpha_beta_equivalence.rs  win_at_chess.rs
src/tests/assets/: 4ply_tests.puz
src/util/: mod.rs
