[package]
name = "sn0l"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"  # The (temporary?) legal move generator
itertools = "0.10.3"
anyhow = "1.0.58"
thiserror = "1.0.38"
nohash = "0.2.0"
clap = { version = "4.0.19", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.8.1"

[profile.release]
lto = true
debug = 1

[profile.test]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
