[package]
name = "sn0l"
version = "0.1.0"
edition = "2021"

[lib]
name = "sn0l"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"  # The (temporary?) legal move generator
itertools = "0.10.3"
anyhow = "1.0.58"
thiserror = "1.0.38"
nohash = "0.2.0"
clap = { version = "4.3.5", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.8.1"
csv = "1.2.1"
sqlx = { version = "0.6.3", features = ["sqlite", "json", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.2", features = ["macros"] }
serde = "1.0.160"
serde_json = "1.0.96"

[profile.release]
lto = true
debug = 1

[profile.test]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
